testsuite/tests/patsyn/should_compile/T8584-2.hs
{-# LANGUAGE PatternSynonyms #-}
module ShouldCompile where

pattern Single :: () => (Show a) => a -> [a]
pattern Single x = [x]

f :: (Show a) => [a] -> a
f (Single x) = x
