testsuite/tests/patsyn/should_fail/T8961a.hs
{-# LANGUAGE PatternSynonyms #-}
module T8961a (pattern Single) where

pattern Single x <- [x]
